Rename app to Sufra and refine crescent moon visuals

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="color-scheme" content="dark" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Iftar Lantern" />
-    <title>Iftar Lantern</title>
-    <link rel="manifest" href="manifest.webmanifest?v=5" />
+    <meta name="apple-mobile-web-app-title" content="Sufra" />
+    <title>Sufra</title>
+    <link rel="manifest" href="manifest.webmanifest?v=6" />
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png" />
     <link rel="icon" type="image/svg+xml" href="icons/icon.svg" />
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&family=Space+Grotesk:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css?v=5" />
+    <link rel="stylesheet" href="styles.css?v=6" />
   </head>
   <body>
     <div class="night-scene" aria-hidden="true">
@@ -36,7 +36,7 @@
     <main class="app-shell">
       <header class="hero">
         <p class="eyebrow">Ramadan planner</p>
-        <h1>Iftar Lantern</h1>
+        <h1>Sufra</h1>
         <p class="subtitle">
           Build dish lists and get random combos where each dish avoids repeating
           until its full category pool is used.
@@ -45,7 +45,7 @@
 
       <section class="panel combo-panel">
         <div class="section-head">
-          <h2>Tonight's Iftar Combo</h2>
+          <h2>Tonight's Sufra Combo</h2>
           <p id="combo-stats" class="stats"></p>
         </div>
 
@@ -136,6 +136,6 @@
       </section>
     </main>
 
-    <script src="app.js?v=5"></script>
+    <script src="app.js?v=6"></script>
   </body>
 </html>
